--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Home</title>
 </head>
 <body>
-    <h2>Arthur's Home</h2>
+    <h2>Arthur Santos</h2>
+    <p>programmer</p>
+
+    <h2>Projects</h2>
+    <h3>SpringSprung</h3>
+    
+    <a href="https://github.com/ajsantos08">GitHub</a> 
+
+    <h2>Instagram</h2>
+    
+    <h2>Contact</h2>
+    <a href="">LinkedIn</a>
+    <a href="mailto:arthurjason08@gmail.com">Email</a>
+
 </body>
 </html>
