--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Arthur Santos</h2>
     <p>programmer</p>
 
-    <h2>Projects</h2>
+    <h2 id="projects">Projects</h2>
     <h3>SpringSprung</h3>
     
     <a href="https://github.com/ajsantos08">GitHub</a> 
