--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                 <a href="mailto:arthurjason08@gmail.com">Email</a>
             </div>
         </div>
+        <div id="footer" class="ContentContainer">
+            <div class="Content">
+                <h2>Footer</h2>
+                
+            </div>
+        </div>
      </div>
 </body>
 </html>
