Updated CSS and social links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="about"class="ContentContainer">
             <div class="Content" id="about">
                 <h2>About</h2>
-                <p>I'm a Comp Sci major studying at the University of Calgary. I'm mostly interested in front end development for mobile and web. Currently learning React framework for JavaScript.
+                <p>I'm a Computer Science major studying at the University of Calgary. I'm mostly interested in front end development for web and mobile and a little game development. Currently learning React framework for JavaScript.
                 </p>
             </div>
         </div>
@@ -35,7 +35,7 @@
                 <h2>Projects</h2>
                 <p>
                     <h3>SpringSprung</h3>
-                    An iOS game I worked on with a team of 5 for intro to iOS course.<br>
+                    An iOS puzzle game created with a team of 5 for intro to iOS course.<br>
                     (Unity Engine, C#)
                     <div class="imgcontainer">
                         <img src="SpringSprung.PNG">
@@ -63,7 +63,7 @@
                 </p>
                 <p>
                     <h3>NBA 2600</h3>
-                    Simple arcade basketball game made for VIC-20 for retrogames course.<br>
+                    Arcade basketball game made for VIC-20 for retrogames course.<br>
                     (Assembly)
                     <div class="imgcontainer">
                         <img src="NBA2600.jpg">
@@ -89,8 +89,8 @@
                 <div id="contactcontainer">   
                     <a href="mailto:arthurjason08@gmail.com" class="fa fa-envelope"></a>
                     <a href="https://github.com/ajsantos08" class="fa fa-github"></a>
-                    <a href="#" class="fa fa-linkedin"></a>
-                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="https://www.linkedin.com/in/arthur-santos-24a383172/" class="fa fa-linkedin"></a>
+                    <a href="https://twitter.com/_ajsantos" class="fa fa-twitter"></a>
                     <a href="https://www.instagram.com/_ajasantos/" class="fa fa-instagram"></a>  
                 </div>           
             </div>
