--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p>
                     <h3>Snaké</h3>
                     Simple snake game made for the raspberry pi 2 for assembly course.<br>
-                    (ARM assembly)
+                    (SPARC assembly)
                     <div class="imgcontainer">
                         <img src="Snake.png">
                     </div>
