--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="about"class="ContentContainer">
             <div class="Content">
                 <h2>About</h2>
-                <p>I'm a Computer Science major studying at the University of Calgary. I'm mostly interested in front end development for web and mobile and a little game development. Currently learning React framework for JavaScript.
+                <p>I'm a Computer Science major studying at the University of Calgary. I'm interested in front-end development for web and mobile and game development because it challenges my creativity which has always been my passion. I am currently learning React framework for JavaScript to be able to create dynamic web applications.
                 </p>
             </div>
         </div>
@@ -87,7 +87,7 @@
                     <a href="https://github.com/ajsantos08" class="fa fa-github"></a>
                     <a href="https://www.linkedin.com/in/arthur-santos-24a383172/" class="fa fa-linkedin"></a>
                     <a href="https://twitter.com/_ajsantos" class="fa fa-twitter"></a>
-                    <a href="https://www.instagram.com/_ajasantos/" class="fa fa-instagram"></a>  
+                    <a href="https://www.instagram.com/_ajasantos/" class="fa fa-instagram"></a>
                 </div>           
             </div>
         </div>
