--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="about"class="ContentContainer">
             <div class="Content">
                 <h2>About</h2>
-                <p>I'm a Computer Science major studying at the University of Calgary. I'm interested in front-end development for web and mobile and game development because it challenges my creativity which has always been my passion. I am currently learning React framework for JavaScript to be able to create dynamic web applications.
+                <p> I am a current Computer Science major at the University of Calgary (Expected Completion: May 2019).The knowledge I've gained through my post-secondary experience has led to a passion for web and mobile front-end development, including game dev. I am currently learning the React framework for JavaScript to be able to create dynamic web applications.
                 </p>
             </div>
         </div>
