update with links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="Content">
                 <h2>Projects</h2>
                 <p>
-                    <h3>SpringSprung</h3>
+                    <h3><a>SpringSprung</a></h3>
                     An iOS puzzle game created with a team of 5 for intro to iOS course.<br>
                     (Unity Engine, C#)
                     <div class="imgcontainer">
@@ -43,7 +43,7 @@
                     </div>
                 </p>
                 <p> 
-                    <h3>Inventory</h3>
+                    <h3><a href='https://github.com/ajsantos08/Apparel-Inventory-CPSC-471'>Inventory</a></h3>
                     Web application for keeping track and modifying clothing stock for database course.<br>
                     (MySQL, PHP, HTML, CSS, Bootstrap)
                     <div class="imgcontainer">
@@ -52,7 +52,7 @@
                     </div>
                 </p>
                 <p>
-                    <h3>Snaké</h3>
+                    <h3><a href='https://github.com/ajsantos08/snake'>Snaké</a></h3>
                     Simple snake game made for the raspberry pi 2 for assembly course.<br>
                     (SPARC assembly)
                     <div class="imgcontainer">
@@ -60,7 +60,7 @@
                     </div>
                 </p>
                 <p>
-                    <h3>NBA 2600</h3>
+                    <h3><a href='https://github.com/ajsantos08/NBA-2600'>NBA 2600</a></h3>
                     Arcade basketball game made for VIC-20 for retrogames course.<br>
                     (Assembly)
                     <div class="imgcontainer">
@@ -69,9 +69,9 @@
                     </div>
                 </p>
                 <p>
-                    <h3>shuffl</h3>
+                    <h3><a href='https://github.com/issackj1/Group5'>shuffl</a></h3>
                     Web application for listening to music while chat with friends for web systems course.<br> 
-                    (HTML, SASS, JavaScript, Node.js, Express for Node.js, MongoDB)<br>
+                    (HTML, CSS, JavaScript, Node.js, Express for Node.js, MongoDB, Socket.io)<br>
                     WIP
                     <div class="imgcontainer">
                             <img src="shuffl.png">
