--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
         </div>
         <div id="top" class="ParallaxContainer" >
             <h1>Arthur Santos</h1>
-            <h4>compsci student</h4>
+            <h4>junior developer</h4>
         </div>
         <div id="about"class="ContentContainer">
             <div class="Content">
                 <h2>About</h2>
-                <p> I am a current Computer Science major at the University of Calgary (Expected Completion: May 2019) and I love code.The knowledge I've gained through my post-secondary experience has led to a passion for web and mobile front-end development, including game dev. I am currently learning the React framework for JavaScript to be able to create dynamic web applications.
-                </p>
+                <p> I am a Computer Science graduate from the University of Calgary and I love code.The knowledge I've gained through my post-secondary experience has led to a passion for web and mobile front-end development, including game dev.</p>
             </div>
         </div>
         <div id="projects" class="ContentContainer">
@@ -71,7 +70,7 @@
                 <p>
                     <h3><a href='https://github.com/issackj1/Group5'>shuffl</a></h3>
                     Web application for listening to music while chat with friends for web systems course.<br> 
-                    (HTML, CSS, JavaScript, Node.js, Express for Node.js, MongoDB, Socket.io)<br>
+                    (MongoDB, Express for Node.js, ReactJS, Node.js, Socket.io)<br>
                     WIP
                     <div class="imgcontainer">
                             <img src="shuffl.png">
@@ -86,8 +85,7 @@
                     <a href="mailto:arthurjason08@gmail.com" class="fa fa-envelope"></a>
                     <a href="https://github.com/ajsantos08" class="fa fa-github"></a>
                     <a href="https://www.linkedin.com/in/arthur-santos-24a383172/" class="fa fa-linkedin"></a>
-                    <a href="https://twitter.com/_ajsantos" class="fa fa-twitter"></a>
-                    <a href="https://www.instagram.com/_ajasantos/" class="fa fa-instagram"></a>
+                    <a href="https://www.instagram.com/_ajsantos.pics/" class="fa fa-instagram"></a>
                 </div>           
             </div>
         </div>
