--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             <div class="Content">
                 <h2>Projects</h2>
                 <p>
+                    <h3><a href='https://github.com/issackj1/Group5'>shuffl</a></h3>
+                    Web application for listening to music while chat with friends for web systems course.<br> 
+                    (MongoDB, Express for Node.js, ReactJS, Node.js, Socket.io)<br>
+                    <div class="imgcontainer">
+                            <img src="shuffl.png">
+                    </div>
+                </p>
+                <p>
                     <h3><a>SpringSprung</a></h3>
                     An iOS puzzle game created with a team of 5 for intro to iOS course.<br>
                     (Unity Engine, C#)
@@ -44,7 +52,7 @@
                 <p> 
                     <h3><a href='https://github.com/ajsantos08/Apparel-Inventory-CPSC-471'>Inventory</a></h3>
                     Web application for keeping track and modifying clothing stock for database course.<br>
-                    (MySQL, PHP, HTML, CSS, Bootstrap)
+                    (MySQL, PHP, HTML, CSS, Bootstrap 4)
                     <div class="imgcontainer">
                         <img src="Inventory-login.png">
                         <img src="Inventory.png">
@@ -67,15 +75,7 @@
                         <img src="NBA2600-ingame.jpg">
                     </div>
                 </p>
-                <p>
-                    <h3><a href='https://github.com/issackj1/Group5'>shuffl</a></h3>
-                    Web application for listening to music while chat with friends for web systems course.<br> 
-                    (MongoDB, Express for Node.js, ReactJS, Node.js, Socket.io)<br>
-                    WIP
-                    <div class="imgcontainer">
-                            <img src="shuffl.png">
-                    </div>
-                </p>
+                
             </div>
         </div>
         <div id="contact" class="ContentContainer">
