--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
                 <h2>Projects</h2>
                 <p>
                     <h3><a href='https://github.com/issackj1/Group5'>shuffl</a></h3>
-                    Web application for listening to music while chat with friends for web systems course.<br> 
+                    Web application for listening to music while chatting with others for web systems course.<br> 
                     (MongoDB, Express for Node.js, ReactJS, Node.js, Socket.io)<br>
-                    <div class="imgcontainer">
-                            <img src="shuffl.png">
+                    <div class="imgcontainer" id="shuffl">
+                            <img src="Shuffl-login.jpg">
+                            <img src="Shuffl-homepage.jpg">
+                            <img src="Shuffl-browse.jpg">
+                            <img src="Shuffl-chat.jpg">
                     </div>
                 </p>
                 <p>
