--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <a href="mailto:arthurjason08@gmail.com" class="fa fa-envelope"></a>
                     <a href="https://github.com/ajsantos08" class="fa fa-github"></a>
                     <a href="https://www.linkedin.com/in/arthur-santos-24a383172/" class="fa fa-linkedin"></a>
-                    <a href="https://www.instagram.com/_ajsantos.pics/" class="fa fa-instagram"></a>
+                    <a href="https://www.instagram.com/_ajsantos.dev/" class="fa fa-instagram"></a>
                 </div>           
             </div>
         </div>
