--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="about"class="ContentContainer">
             <div class="Content">
                 <h2>About</h2>
-                <p> I am a Computer Science graduate from the University of Calgary.The knowledge I've gained through my post-secondary experience has led to a passion for web and mobile front-end development.</p>
+                <p> I am a Computer Science graduate from the University of Calgary.The knowledge I've gained through my post-secondary experience has led to a passion for web and mobile front-end development. I have a strong interest in the process of UI/UX design and development</p>
             </div>
         </div>
         <div id="projects" class="ContentContainer">
