--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Arthur Santos</title>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    		
 </head>
 <body>
+    
     <div class="MainContainer">
         <div class="NavContainer">
             <ul>
@@ -20,7 +24,7 @@
         </div>
         <div id="top" class="ParallaxContainer" >
             <h1>Arthur Santos</h1>
-            <h4>junior developer</h4>
+            <h4>developer</h4>
         </div>
         <div id="about"class="ContentContainer">
             <div class="Content">
@@ -37,7 +41,7 @@
                     <h3><a href='https://github.com/issackj1/Group5'>shuffl</a></h3>
                     Web application for listening to music while chatting with others for web systems course.<br> 
                     (MongoDB, Express for Node.js, ReactJS, Node.js, Socket.io)<br>
-                    <div class="imgcontainer" id="shuffl">
+                    <div class="imgcontainer">
                             <img src="Shuffl-login.jpg">
                             <img src="Shuffl-homepage.jpg">
                             <img src="Shuffl-browse.jpg">
@@ -49,9 +53,9 @@
                     An iOS puzzle game created with a team of 5 for intro to iOS course.<br>
                     (Unity Engine, C#)
                     <div class="imgcontainer">
-                        <img src="SpringSprung.PNG">
-                        <img src="SpringSprung-ingame.PNG">
-                        <img src="SpringSprung-gif.gif">
+                        <div class='container'><img src="SpringSprung.PNG"></div>
+                        <div class='container'><img src="SpringSprung-ingame.PNG"></div>
+                        <div class='container'><img src="SpringSprung-gif.gif"></div>
                     </div>
                 </p>
                 <p> 
@@ -59,8 +63,8 @@
                     Web application for keeping track and modifying clothing stock for database course.<br>
                     (MySQL, PHP, HTML, CSS, Bootstrap 4)
                     <div class="imgcontainer">
-                        <img src="Inventory-login.png">
-                        <img src="Inventory.png">
+                        <div class='container'><img src="Inventory-login.png"></div>
+                        <div class='container'><img src="Inventory.png"></div>
                     </div>
                 </p>
                 <p>
@@ -100,15 +104,27 @@
             </div>
         </div>
      </div>
-</body>
-<script>
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-            e.preventDefault();
-            document.querySelector(this.getAttribute('href')).scrollIntoView({
-                behavior: 'smooth', block: 'start'
+
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth', block: 'start'
+                });
             });
         });
-    });
-</script>
+
+        $(document).ready(function(){
+            $('.imgcontainer').slick({
+                dots: true
+            });
+        });
+    </script>
+</body>
+
 </html>
