--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h2>About</h2>
                 <p> I am a Computer Science graduate from the University of Calgary.
                     The knowledge I've gained through my post-secondary experience has led to a passion for web and mobile front-end development. 
-                    I have a strong interest in the process of UI/UX design and development and love to learn about new technologies to create funtional yet clean interfaces.</p>
+                    I have a strong interest in the process of UI/UX design and development and love to learn about new technologies to create clean and functional interfaces.</p>
             </div>
         </div>
         <div id="projects" class="ContentContainer">
