optimization: changed gif to mp4

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="imgcontainer">
                         <div class='container'><img src="SpringSprung.PNG"></div>
                         <div class='container'><img src="SpringSprung-ingame.PNG"></div>
-                        <div class='container'><img src="SpringSprung-gif.gif"></div>
+                        <div class='container'><video src="SpringSprung-gif.mp4" autoplay loop></div>
                     </div>
                 </p>
                 <p> 
