optimize: png to jpg

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     An iOS puzzle game created with a team of 5 for intro to iOS course.<br>
                     (Unity Engine, C#)
                     <div class="imgcontainer">
-                        <div class='container'><img src="SpringSprung.PNG"></div>
-                        <div class='container'><img src="SpringSprung-ingame.PNG"></div>
+                        <div class='container'><img src="SpringSprung.jpg"></div>
+                        <div class='container'><img src="SpringSprung-ingame.jpg"></div>
                         <div class='container'><video src="SpringSprung-gif.mp4" autoplay loop></div>
                     </div>
                 </p>
@@ -63,8 +63,8 @@
                     Web application for keeping track and modifying clothing stock for database course.<br>
                     (MySQL, PHP, HTML, CSS, Bootstrap 4)
                     <div class="imgcontainer">
-                        <div class='container'><img src="Inventory-login.png"></div>
-                        <div class='container'><img src="Inventory.png"></div>
+                        <div class='container'><img src="Inventory-login.jpg"></div>
+                        <div class='container'><img src="Inventory.jpg"></div>
                     </div>
                 </p>
                 <p>
@@ -72,7 +72,7 @@
                     Simple snake game made for the raspberry pi 2 for assembly course.<br>
                     (SPARC assembly)
                     <div class="imgcontainer">
-                        <img src="Snake.png">
+                        <img src="Snake.jpg">
                     </div>
                 </p>
                 <p>
